--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 ultralytics==8.3.30
-opencv-python>=4.10.0
+opencv-python-headless>=4.10.0
 deep-sort-realtime>=1.3.2
 fastapi>=0.115.0
-uvicorn>=0.30.1
+uvicorn[standard]>=0.30.1
 numpy>=1.26.0
 pydantic>=2.8.0
-uvicorn[standard]>=0.30.1
+prometheus-client>=0.20.0
+websockets>=12.0
+python-multipart>=0.0.9
